07-security/network-policy-project/frontend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend-tester
  namespace: network-policy-demo
  labels:
    app: frontend
spec:
  containers:
  - name: frontend-tester
    image: busybox
    command: ["/bin/sh", "-c", "sleep infinity"]
